[gd_scene load_steps=5 format=3 uid="uid://42py47hjlyp"]

[ext_resource type="Script" uid="uid://beilmp4uxanyk" path="res://ui/player/score_event_ui.gd" id="1_efchx"]

[sub_resource type="Animation" id="Animation_efchx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScoreContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScoreContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(100, 100)]
}

[sub_resource type="Animation" id="Animation_5myn5"]
resource_name = "show"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScoreContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScoreContainer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ScoreContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(100, 100), Vector2(100, 80)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g5tbx"]
_data = {
&"RESET": SubResource("Animation_efchx"),
&"show": SubResource("Animation_5myn5")
}

[node name="ScoreEvent" type="Control"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_efchx")

[node name="ScoreContainer" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
localize_numeral_system = false

[node name="NameLabel" type="Label" parent="ScoreContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -63.0
offset_right = 25.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Air"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="ScoreContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -29.0
offset_right = 45.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "+100"
horizontal_alignment = 1
vertical_alignment = 2

[node name="MultiplierLabel" type="Label" parent="ScoreContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 35.0
offset_top = -1.0
offset_right = 62.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.387934
theme_override_colors/font_color = Color(1, 0.564706, 0.564706, 1)
theme_override_font_sizes/font_size = 32
text = "x1"
horizontal_alignment = 1
vertical_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_g5tbx")
}
